Fix: vertical alignment

--- a/assets/scripts/blocks/row/editor.scss
+++ b/assets/scripts/blocks/row/editor.scss
@@ -23,18 +23,27 @@ $container-max-widths: (
 }
 
 // Setup flex columns.
-> .block-editor-block-list__block {
+.wp-block[data-type="my/column"] {
   @include flex-full-height();
-  > .block-editor-block-list__block-edit {
+  > .wp-block-my-column {
     @include flex-full-height();
-    > [data-block] {
-      @include flex-full-height();
-      > .wp-block-my-column {
-        @include flex-full-height();
-      }
-    }
   }
 }
+
+/**
+ * Setup columns container.
+ */
+.wp-block-my-row {
+  > .block-editor-inner-blocks {
+    // Setup container.
+    margin-left: auto;
+    margin-right: auto;
+  }
+  &.has-fixed-container > .block-editor-inner-blocks {
+    @include make-container-max-widths();
+  }
+}
+
 
 
 /**
